feat: delete share logic
