# backend/gen/http/openapi3.yaml
@@ -6,7 +6,7 @@ info:
 servers:
     - url: http://localhost:8080
 paths:
-    /key_management/create_master_key:
+    /key_management/add_share:
         post:
             tags:
                 - fishykeys
@@ -20,7 +20,7 @@ paths:
                         schema:
                             $ref: '#/components/schemas/AddShareRequestBody'
                         example:
-                            share: 5
+                            share: EXAMPLEA5ZKwDn8Zotr3B+d+F+UzrcJ1Yhl2rU0
             responses:
                 "201":
                     description: Created response.
@@ -29,31 +29,141 @@ paths:
                             schema:
                                 $ref: '#/components/schemas/AddShareResponseBody'
                             example:
-                                index: 3541594672439882819
+                                index: 1063698717744459219
+                                unlocked: false
                 "400":
-                    description: 'invalid_parameters: Bad Request response.'
+                    description: 'wrong_shares: Bad Request response.'
                     content:
                         application/json:
                             schema:
                                 type: string
-                                example: Ducimus et assumenda neque commodi repudiandae sit.
-                            example: Saepe nesciunt aut.
+                                example: Sequi accusantium fugit sed.
+                            example: Esse in.
+                "404":
+                    description: 'no_key_set: Not Found response.'
+                    content:
+                        application/json:
+                            schema:
+                                type: string
+                                example: Ratione eos voluptates sunt quia.
+                            example: Sint asperiores repudiandae deleniti sit rerum eveniet.
                 "409":
-                    description: 'too_many_shares: Conflict response.'
+                    description: 'key_already_unlocked: Conflict response.'
                     content:
                         application/json:
                             schema:
                                 type: string
-                                example: Perspiciatis consectetur consequuntur quia libero vel.
-                            example: Eveniet laudantium est incidunt ut.
+                                example: Quo aut eum et.
+                            example: Tenetur maxime quasi veniam autem temporibus.
                 "500":
                     description: 'internal_error: Internal Server Error response.'
                     content:
                         application/json:
                             schema:
                                 type: string
-                                example: Consequuntur animi qui ad ratione.
-                            example: Id fuga in numquam voluptatem.
+                                example: Occaecati nesciunt eos commodi.
+                            example: Nulla aut hic maiores officia.
+    /key_management/create_master_key:
+        post:
+            tags:
+                - fishykeys
+            summary: create_master_key fishykeys
+            description: Create a new master key and split it into shares
+            operationId: fishykeys#create_master_key
+            requestBody:
+                required: true
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/CreateMasterKeyRequestBody'
+                        example:
+                            min_shares: 3
+                            total_shares: 5
+            responses:
+                "201":
+                    description: Created response.
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/CreateMasterKeyResponseBody'
+                            example:
+                                shares:
+                                    - Eligendi et dolorum corporis.
+                                    - Perspiciatis pariatur fuga.
+                "400":
+                    description: 'invalid_parameters: Bad Request response.'
+                    content:
+                        application/json:
+                            schema:
+                                type: string
+                                example: Saepe suscipit fuga impedit.
+                            example: Occaecati est inventore.
+                "409":
+                    description: 'key_already_exists: Conflict response.'
+                    content:
+                        application/json:
+                            schema:
+                                type: string
+                                example: Iure esse error consequatur.
+                            example: Minus ullam vel dolorum exercitationem.
+                "500":
+                    description: 'internal_error: Internal Server Error response.'
+                    content:
+                        application/json:
+                            schema:
+                                type: string
+                                example: Maxime earum.
+                            example: Qui excepturi.
+    /key_management/delete_share:
+        delete:
+            tags:
+                - fishykeys
+            summary: delete_share fishykeys
+            description: Delete a share from the key management system
+            operationId: fishykeys#delete_share
+            requestBody:
+                required: true
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/DeleteShareRequestBody'
+                        example:
+                            index: 1
+            responses:
+                "200":
+                    description: OK response.
+                "400":
+                    description: 'wrong_index: Bad Request response.'
+                    content:
+                        application/json:
+                            schema:
+                                type: string
+                                example: Non optio reiciendis dolore animi deleniti aut.
+                            example: Sint ipsa debitis voluptatum non ducimus natus.
+                "404":
+                    description: 'no_key_set: Not Found response.'
+                    content:
+                        application/json:
+                            schema:
+                                type: string
+                                example: Molestiae nesciunt architecto sint.
+                            example: Cum ipsum tenetur blanditiis est pariatur.
+                "409":
+                    description: 'key_already_unlocked: Conflict response.'
+                    content:
+                        application/json:
+                            schema:
+                                type: string
+                                example: Qui quia corrupti.
+                            example: Et quis vel reiciendis.
+                "500":
+                    description: 'internal_error: Internal Server Error response.'
+                    content:
+                        application/json:
+                            schema:
+                                type: string
+                                example: Quos doloribus repellendus.
+                            example: Laborum ratione minima.
     /key_management/status:
         get:
             tags:
@@ -69,38 +179,37 @@ paths:
                             schema:
                                 $ref: '#/components/schemas/GetKeyStatusResponseBody'
                             example:
-                                current_shares: 1634144517155123805
-                                is_locked: true
-                                min_shares: 6718364374947157668
-                                total_shares: 7654723300438466742
+                                current_shares: 231914414474347689
+                                is_locked: false
+                                min_shares: 3263566952308650166
+                                total_shares: 6077150294396154200
                 "404":
                     description: 'no_key_set: Not Found response.'
                     content:
                         application/json:
                             schema:
                                 type: string
-                                example: Rem quisquam quae sunt eos in ut.
-                            example: Suscipit fuga impedit nesciunt maxime.
+                                example: Id eos sapiente culpa.
+                            example: Non quos veniam.
                 "500":
                     description: 'internal_error: Internal Server Error response.'
                     content:
                         application/json:
                             schema:
                                 type: string
-                                example: Voluptas numquam aut et sed voluptatum.
-                            example: Enim iure.
+                                example: Eos cumque.
+                            example: Placeat dignissimos error minus.
 components:
     schemas:
         AddShareRequestBody:
             type: object
             properties:
                 share:
-                    type: integer
+                    type: string
                     description: One of the shares need to unlock the master key
-                    example: 5
-                    format: int64
+                    example: EXAMPLEA5ZKwDn8Zotr3B+d+F+UzrcJ1Yhl2rU0
             example:
-                share: 5
+                share: EXAMPLEA5ZKwDn8Zotr3B+d+F+UzrcJ1Yhl2rU0
             required:
                 - share
         AddShareResponseBody:
@@ -109,10 +218,18 @@ components:
                 index:
                     type: integer
                     description: The index of the share added
-                    example: 552660392149742136
+                    example: 4530504450280615223
                     format: int64
+                unlocked:
+                    type: boolean
+                    description: Whether the master key has been unlocked
+                    example: false
             example:
-                index: 7527884732173663858
+                index: 1193827041301060708
+                unlocked: true
+            required:
+                - index
+                - unlocked
         CreateMasterKeyRequestBody:
             type: object
             properties:
@@ -139,44 +256,54 @@ components:
                     type: array
                     items:
                         type: string
-                        example: Omnis numquam voluptatem quae.
+                        example: Impedit tempore et quod excepturi necessitatibus dicta.
                     description: The generated key shares
                     example:
-                        - Earum qui at provident repellat qui iure.
-                        - Labore molestiae maxime ut dignissimos.
-                        - Fugiat minima.
-                        - Eum possimus.
+                        - Eos ducimus repudiandae et distinctio.
+                        - Saepe nesciunt aut.
             example:
                 shares:
-                    - Aut dolores.
-                    - Quam voluptatem ea.
+                    - Fuga in numquam voluptatem est.
+                    - Laudantium est incidunt.
+        DeleteShareRequestBody:
+            type: object
+            properties:
+                index:
+                    type: integer
+                    description: The index of the share to delete
+                    example: 1
+                    format: int64
+            example:
+                index: 1
+            required:
+                - index
         GetKeyStatusResponseBody:
             type: object
             properties:
                 current_shares:
                     type: integer
                     description: Number of shares currently held
-                    example: 6597967831032783709
+                    example: 5355986795941107789
                     format: int64
                 is_locked:
                     type: boolean
                     description: Whether the key is currently locked
-                    example: false
+                    example: true
                 min_shares:
                     type: integer
                     description: Minimum number of shares required
-                    example: 6553916485925491878
+                    example: 245603797818085730
                     format: int64
                 total_shares:
                     type: integer
                     description: Total number of shares
-                    example: 5272011913761022925
+                    example: 1982298599828541056
                     format: int64
             example:
-                current_shares: 3475276066018248154
+                current_shares: 892481737442494027
                 is_locked: true
-                min_shares: 5326118618025669261
-                total_shares: 6752325125503319315
+                min_shares: 8439783739481616722
+                total_shares: 6071307034643610298
             required:
                 - is_locked
                 - current_shares
